--- a/index.html
+++ b/index.html
@@ -55,21 +55,41 @@
             <div class="container benefits-section">
                 <ul class="benefits-list">
                     <li class="benefits-item">
+                        <div class="benefits-background">
+                            <svg class="benefits-icon">
+                                <use href="./images/sprite.svg#antenna-icon"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Внимание к деталям</h3>
                         <p class="benefits-description">Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
                     <li class="benefits-item">
+                        <div class="benefits-background">
+                            <svg class="benefits-icon">
+                                <use href="./images/sprite.svg#clock-icon"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Пунктуальность</h3>
                         <p class="benefits-description">Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
                     <li class="benefits-item">
+                        <div class="benefits-background">
+                            <svg class="benefits-icon">
+                                <use href="./images/sprite.svg#diagram-icon"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Планирование</h3>
                         <p class="benefits-description">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
                     <li class="benefits-item">
+                        <div class="benefits-background">
+                            <svg class="benefits-icon">
+                                <use href="./images/sprite.svg#astronaut-icon"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Современные технологии</h3>
                         <p class="benefits-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
