--- a/index.html
+++ b/index.html
@@ -143,6 +143,57 @@
                 </ul>
             </div>
         </section>
+
+        <!--clients section-->
+        <section class="clients">
+            <div class="container clients-section">
+                <h2 class="clients-title">Постоянные клиенты</h2>
+                <ul class="clients-list">
+                    <li class="item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-pic">
+                                <use href="./images/sprite.svg#client1" width="40" height="46.7"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-pic">
+                                <use href="./images/sprite.svg#client2" width="40" height="52"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-pic">
+                                <use href="./images/sprite.svg#client3" width="43.46" height="41.18"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-pic">
+                                <use href="./images/sprite.svg#client4" width="84.44" height="40.62"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-pic">
+                                <use href="./images/sprite.svg#client5" width="62.54" height="45.43"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="clients-link">    
+                            <svg class="clients-pic">
+                                <use href="./images/sprite.svg#client6" width="93.79" height="43.93"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!--footer section-->
     <footer class="footer">
