--- a/index.html
+++ b/index.html
@@ -151,43 +151,43 @@
                 <ul class="clients-list">
                     <li class="item">
                         <a href="" class="clients-link">
-                            <svg class="clients-pic">
-                                <use href="./images/sprite.svg#client1" width="40" height="46.7"></use>
+                            <svg class="clients-pic" width="41" height="46.7">
+                                <use href="./images/sprite.svg#client1" ></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="clients-link">
-                            <svg class="clients-pic">
-                                <use href="./images/sprite.svg#client2" width="40" height="52"></use>
+                            <svg class="clients-pic" width="40" height="52">
+                                <use href="./images/sprite.svg#client2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="clients-link">
-                            <svg class="clients-pic">
-                                <use href="./images/sprite.svg#client3" width="43.46" height="41.18"></use>
+                            <svg class="clients-pic" width="43.46" height="41.18">
+                                <use href="./images/sprite.svg#client3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="clients-link">
-                            <svg class="clients-pic">
-                                <use href="./images/sprite.svg#client4" width="84.44" height="40.62"></use>
+                            <svg class="clients-pic" width="84.44" height="40.62">
+                                <use href="./images/sprite.svg#client4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="clients-link">
-                            <svg class="clients-pic">
-                                <use href="./images/sprite.svg#client5" width="62.54" height="45.43"></use>
+                            <svg class="clients-pic" width="62.54" height="45.43">
+                                <use href="./images/sprite.svg#client5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="clients-link">    
-                            <svg class="clients-pic">
-                                <use href="./images/sprite.svg#client6" width="93.79" height="43.93"></use>
+                            <svg class="clients-pic" width="93.79" height="43.93">
+                                <use href="./images/sprite.svg#client6"></use>
                             </svg>
                         </a>
                     </li>
