фіналізація домашньої роботи №4

--- a/index.html
+++ b/index.html
@@ -118,13 +118,57 @@
                             <h3 class="team-member">Игорь Демьяненко</h3>
                             <p class="team-position">Product Designer</p>
                         </div>
+                        <div class="social-links-block">
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="20">
+                                    <use href="./images/sprite.svg#instagram-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="16.25">
+                                    <use href="./images/sprite.svg#twitter-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="10" height="20">
+                                    <use href="./images/sprite.svg#facebook-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="20">
+                                    <use href="./images/sprite.svg#linkedin-icon"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="item">
-                          <img class="photo-member" src="./images/teammember2.jpeg" alt="teammember2" width="270">
-                          <div class="card-member">
+                        <img class="photo-member" src="./images/teammember2.jpeg" alt="teammember2" width="270">
+                        <div class="card-member">
                             <h3 class="team-member">Ольга Репина</h3>
                             <p class="team-position">Frontend Developer</p>
-                          </div>
+                        </div>
+                        <div class="social-links-block">
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="20">
+                                    <use href="./images/sprite.svg#instagram-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="16.25">
+                                    <use href="./images/sprite.svg#twitter-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="10" height="20">
+                                    <use href="./images/sprite.svg#facebook-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="20">
+                                    <use href="./images/sprite.svg#linkedin-icon"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="item">
                         <img class="photo-member" src="./images/teammember3.jpeg" alt="teammember3" width="270">
@@ -132,12 +176,56 @@
                             <h3 class="team-member">Николай Тарасов</h3>
                             <p class="team-position">Marketing</p>
                         </div>
+                        <div class="social-links-block">
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="20">
+                                    <use href="./images/sprite.svg#instagram-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="16.25">
+                                    <use href="./images/sprite.svg#twitter-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="10" height="20">
+                                    <use href="./images/sprite.svg#facebook-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="20">
+                                    <use href="./images/sprite.svg#linkedin-icon"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="item">
                         <img class="photo-member" src="./images/teammember4.jpeg" alt="teammember4" width="270">
                         <div class="card-member">
                             <h3 class="team-member">Михаил Ермаков</h3>
                             <p class="team-position">UI Designer</p>
+                        </div>
+                        <div class="social-links-block">
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="20">
+                                    <use href="./images/sprite.svg#instagram-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="16.25">
+                                    <use href="./images/sprite.svg#twitter-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="10" height="20">
+                                    <use href="./images/sprite.svg#facebook-icon"></use>
+                                </svg>
+                            </a>
+                            <a href="" class="social-links">
+                                <svg class="social-link" width="20" height="20">
+                                    <use href="./images/sprite.svg#linkedin-icon"></use>
+                                </svg>
+                            </a>
                         </div>
                     </li>
                 </ul>
@@ -197,13 +285,40 @@
     </main>
     <!--footer section-->
     <footer class="footer">
-            <section class="container">
-                <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
-                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-                <ul class="footer-contacts">
-                    <li class="item"><a href="mailto:info@devstudio.com" class="footer-nav-link">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+380961111111" class="footer-nav-link">+38 096 111 11 11</a></li>
-                </ul>
+            <section class="container footer-section">
+                <div class="contacts">
+                    <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+                    <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+                    <ul class="footer-contacts">
+                        <li class="item"><a href="mailto:info@devstudio.com" class="footer-nav-link">info@devstudio.com</a></li>
+                        <li class="item"><a href="tel:+380961111111" class="footer-nav-link">+38 096 111 11 11</a></li>
+                    </ul>
+                </div>
+                <div class="social-contacts">
+                    <p class="social-contacts-description">ПРИСОЕДИНЯЙТЕСЬ</p>
+                    <div class="social-links-footer">
+                        <a href="" class="social-links">
+                            <svg class="social-link-footer" width="20" height="20">
+                                <use href="./images/sprite.svg#instagram-icon"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="social-links">
+                            <svg class="social-link-footer" width="20" height="16.25">
+                                <use href="./images/sprite.svg#twitter-icon"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="social-links">
+                            <svg class="social-link-footer" width="10" height="20">
+                                <use href="./images/sprite.svg#facebook-icon"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="social-links">
+                            <svg class="social-link-footer" width="20" height="20">
+                                <use href="./images/sprite.svg#linkedin-icon"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
             </section>
     </footer>    
 </body>
