--- a/portfolio.html
+++ b/portfolio.html
@@ -138,13 +138,40 @@
     </main>
         <!--footer section-->
         <footer class="footer">
-            <section class="container">
-                <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
-                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-                <ul class="footer-contacts">
-                    <li class="item"><a href="mailto:info@devstudio.com" class="footer-nav-link">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+380961111111" class="footer-nav-link">+38 096 111 11 11</a></li>
-                </ul>
+            <section class="container footer-section">
+                <div class="contacts">
+                    <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+                    <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+                    <ul class="footer-contacts">
+                        <li class="item"><a href="mailto:info@devstudio.com" class="footer-nav-link">info@devstudio.com</a></li>
+                        <li class="item"><a href="tel:+380961111111" class="footer-nav-link">+38 096 111 11 11</a></li>
+                    </ul>
+                </div>
+                <div class="social-contacts">
+                    <p class="social-contacts-description">ПРИСОЕДИНЯЙТЕСЬ</p>
+                    <div class="social-links-footer">
+                        <a href="" class="social-links">
+                            <svg class="social-link-footer" width="20" height="20">
+                                <use href="./images/sprite.svg#instagram-icon"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="social-links">
+                            <svg class="social-link-footer" width="20" height="16.25">
+                                <use href="./images/sprite.svg#twitter-icon"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="social-links">
+                            <svg class="social-link-footer" width="10" height="20">
+                                <use href="./images/sprite.svg#facebook-icon"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="social-links">
+                            <svg class="social-link-footer" width="20" height="20">
+                                <use href="./images/sprite.svg#linkedin-icon"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
             </section>
         </footer>
     </body>    
