Фіналізація домашньої роботи №4 (2)

--- a/index.html
+++ b/index.html
@@ -120,22 +120,22 @@
                         </div>
                         <div class="social-links-block">
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="20">
+                                <svg width="20" height="20">
                                     <use href="./images/sprite.svg#instagram-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="16.25">
+                                <svg width="20" height="16.25">
                                     <use href="./images/sprite.svg#twitter-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="10" height="20">
+                                <svg width="10" height="20">
                                     <use href="./images/sprite.svg#facebook-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="20">
+                                <svg width="20" height="20">
                                     <use href="./images/sprite.svg#linkedin-icon"></use>
                                 </svg>
                             </a>
@@ -149,22 +149,22 @@
                         </div>
                         <div class="social-links-block">
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="20">
+                                <svg width="20" height="20">
                                     <use href="./images/sprite.svg#instagram-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="16.25">
+                                <svg width="20" height="16.25">
                                     <use href="./images/sprite.svg#twitter-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="10" height="20">
+                                <svg width="10" height="20">
                                     <use href="./images/sprite.svg#facebook-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="20">
+                                <svg width="20" height="20">
                                     <use href="./images/sprite.svg#linkedin-icon"></use>
                                 </svg>
                             </a>
@@ -178,22 +178,22 @@
                         </div>
                         <div class="social-links-block">
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="20">
+                                <svg width="20" height="20">
                                     <use href="./images/sprite.svg#instagram-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="16.25">
+                                <svg width="20" height="16.25">
                                     <use href="./images/sprite.svg#twitter-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="10" height="20">
+                                <svg width="10" height="20">
                                     <use href="./images/sprite.svg#facebook-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="20">
+                                <svg width="20" height="20">
                                     <use href="./images/sprite.svg#linkedin-icon"></use>
                                 </svg>
                             </a>
@@ -207,22 +207,22 @@
                         </div>
                         <div class="social-links-block">
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="20">
+                                <svg width="20" height="20">
                                     <use href="./images/sprite.svg#instagram-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="16.25">
+                                <svg width="20" height="16.25">
                                     <use href="./images/sprite.svg#twitter-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="10" height="20">
+                                <svg width="10" height="20">
                                     <use href="./images/sprite.svg#facebook-icon"></use>
                                 </svg>
                             </a>
                             <a href="" class="social-links">
-                                <svg class="social-link" width="20" height="20">
+                                <svg width="20" height="20">
                                     <use href="./images/sprite.svg#linkedin-icon"></use>
                                 </svg>
                             </a>
