--- a/portfolio.html
+++ b/portfolio.html
@@ -69,67 +69,85 @@
                     <h1 hidden="">Portfolio</h1>
                     <ul class="portfolio-list">
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic1.jpeg" alt="pic1" width="370">
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-title">Технокряк</h3>
-                                <p class="portfolio-text">Веб-сайт</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic1.jpeg" alt="pic1" width="370">
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-title">Технокряк</h3>
+                                    <p class="portfolio-text">Веб-сайт</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic2.jpeg" alt="pic2" width="370">
-                            <div class="portfolio-card">
-                                 <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-                                 <p class="portfolio-text">Дизайн</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic2.jpeg" alt="pic2" width="370">
+                                <div class="portfolio-card">
+                                     <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+                                     <p class="portfolio-text">Дизайн</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic3.jpeg" alt="pic3" width="370">
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-title">Ресторан Seafood</h3>
-                                <p class="portfolio-text">Приложение</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic3.jpeg" alt="pic3" width="370">
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-title">Ресторан Seafood</h3>
+                                    <p class="portfolio-text">Приложение</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic4.jpeg" alt="pic4" width="370">
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-title">Проект Prime</h3>
-                                <p class="portfolio-text">Маркетинг</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic4.jpeg" alt="pic4" width="370">
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-title">Проект Prime</h3>
+                                    <p class="portfolio-text">Маркетинг</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic5.jpeg" alt="pic5" width="370">
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-title">Проект Boxes</h3>
-                                <p class="portfolio-text">Приложение</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic5.jpeg" alt="pic5" width="370">
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-title">Проект Boxes</h3>
+                                    <p class="portfolio-text">Приложение</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic6.jpeg" alt="pic6" width="370">
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                                <p class="portfolio-text">Веб-сайт</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic6.jpeg" alt="pic6" width="370">
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                                    <p class="portfolio-text">Веб-сайт</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic7.jpeg" alt="pic7" width="370">
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-title">Издание Limited Edition</h3>
-                                <p class="portfolio-text">Дизайн</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic7.jpeg" alt="pic7" width="370">
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-title">Издание Limited Edition</h3>
+                                    <p class="portfolio-text">Дизайн</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic8.jpeg" alt="pic8" width="370">
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-title">Проект LAB</h3>
-                                <p class="portfolio-text">Маркетинг</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic8.jpeg" alt="pic8" width="370">
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-title">Проект LAB</h3>
+                                    <p class="portfolio-text">Маркетинг</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img class="portfolio-img" src="./images/pic9.jpeg" alt="pic9" width="370">
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-title">Growing Business</h3>
-                                <p class="portfolio-text">Приложение</p>
-                            </div>
+                            <a href="">
+                                <img class="portfolio-img" src="./images/pic9.jpeg" alt="pic9" width="370">
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-title">Growing Business</h3>
+                                    <p class="portfolio-text">Приложение</p>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
